# snorkel-g-agent

./: .gitignore  README.md  pyproject.toml
configs/: glm52.example.yaml  system_prompt.md
examples/: tbench_task.json
src/snorkel_g_agent/: __init__.py  actions.py  agent.py  batch.py  cli.py  config.py  context.py  logging.py  prompts.py  provider.py  schema.py  tool_definitions.py  tools.py  trajectory.py
tests/: test_actions.py  test_agent.py  test_batch.py  test_context.py  test_logging.py  test_provider.py  test_tools.py  test_trajectory.py
